intel-clc build failure, i think?
FAILED: src/compiler/clc/liblibmesaclc.a.p/clc_helpers.cpp.o
c++ -Isrc/compiler/clc/liblibmesaclc.a.p -Isrc/compiler/clc -I../mesa/src/compiler/clc -Iinclude -I../mesa/include -Isrc -I../mesa/src -Isrc/compiler/spirv -I../mesa/src/compiler/spirv -Isrc/compiler/nir -I../mesa/src/compiler/nir -Isrc/compiler -I../mesa/src/compiler -I/usr/include/valgrind -fdiagnostics-color=always -DNDEBUG -D_FILE_OFFSET_BITS=64 -Wall -Winvalid-pch -std=c++17 '-DPACKAGE_VERSION="24.1.0-devel"' '-DPACKAGE_BUGREPORT="https://gitlab.freedesktop.org/mesa/mesa/-/issues"' -DHAVE_OPENGL=1 -DHAVE_OPENGL_ES_1=0 -DHAVE_OPENGL_ES_2=1 -DHAVE_R300 -DHAVE_R600 -DHAVE_RADEONSI -DHAVE_NOUVEAU -DHAVE_IRIS -DHAVE_ZINK -DHAVE_VIRGL -DHAVE_SVGA -DHAVE_SWRAST -DHAVE_PANFROST -DHAVE_LIMA -DHAVE_ASAHI -DHAVE_CROCUS -DHAVE_D3D12 -DVK_ENABLE_BETA_EXTENSIONS -DVIDEO_CODEC_VC1DEC=1 -DVIDEO_CODEC_H264DEC=1 -DVIDEO_CODEC_H264ENC=1 -DVIDEO_CODEC_H265DEC=1 -DVIDEO_CODEC_H265ENC=1 -DVIDEO_CODEC_AV1DEC=0 -DVIDEO_CODEC_AV1ENC=0 -DVIDEO_CODEC_VP9DEC=0 -DHAVE_X11_PLATFORM -DHAVE_WAYLAND_PLATFORM -DHAVE_SURFACELESS_PLATFORM -DHAVE_DRM_PLATFORM -DHAVE_XCB_PLATFORM -DHAVE_GALLIUM_D3D12_VIDEO -DHAVE_ST_VDPAU -DENABLE_ST_OMX_BELLAGIO=1 -DENABLE_ST_OMX_TIZONIA=0 -DHAVE_VA_SURFACE_ATTRIB_DRM_FORMAT_MODIFIERS -DGLX_INDIRECT_RENDERING -DGLX_DIRECT_RENDERING -DGLX_USE_DRM -DGLAPI_EXPORT_PROTO_ENTRY_POINTS=0 -DALLOW_KCMP -DMESA_DEBUG=0 -DENABLE_SHADER_CACHE '-DMESA_SHADER_CACHE_MAX_SIZE="8G"' -DHAVE___BUILTIN_BSWAP32 -DHAVE___BUILTIN_BSWAP64 -DHAVE___BUILTIN_CLZ -DHAVE___BUILTIN_CLZLL -DHAVE___BUILTIN_CTZ -DHAVE___BUILTIN_EXPECT -DHAVE___BUILTIN_FFS -DHAVE___BUILTIN_FFSLL -DHAVE___BUILTIN_POPCOUNT -DHAVE___BUILTIN_POPCOUNTLL -DHAVE___BUILTIN_UNREACHABLE -DHAVE___BUILTIN_TYPES_COMPATIBLE_P -DHAVE_FUNC_ATTRIBUTE_CONST -DHAVE_FUNC_ATTRIBUTE_FLATTEN -DHAVE_FUNC_ATTRIBUTE_MALLOC -DHAVE_FUNC_ATTRIBUTE_PURE -DHAVE_FUNC_ATTRIBUTE_UNUSED -DHAVE_FUNC_ATTRIBUTE_WARN_UNUSED_RESULT -DHAVE_FUNC_ATTRIBUTE_WEAK -DHAVE_FUNC_ATTRIBUTE_FORMAT -DHAVE_FUNC_ATTRIBUTE_PACKED -DHAVE_FUNC_ATTRIBUTE_RETURNS_NONNULL -DHAVE_FUNC_ATTRIBUTE_ALIAS -DHAVE_FUNC_ATTRIBUTE_NORETURN -DHAVE_FUNC_ATTRIBUTE_VISIBILITY -DHAVE_UINT128 -DHAVE_REALLOCARRAY -DHAVE_FMEMOPEN -DUSE_SSE41 -DHAVE___BUILTIN_IA32_CLFLUSHOPT -DUSE_GCC_ATOMIC_BUILTINS -DUSE_X86_64_ASM -DMAJOR_IN_SYSMACROS -DHAS_SCHED_H -DHAS_SCHED_GETAFFINITY -DHAVE_LINUX_FUTEX_H -DHAVE_ENDIAN_H -DHAVE_DLFCN_H -DHAVE_SYS_SHM_H -DHAVE_CET_H -DHAVE_SYS_INOTIFY_H -DHAVE_STRTOF -DHAVE_MKOSTEMP -DHAVE_MEMFD_CREATE -DHAVE_RANDOM_R -DHAVE_FLOCK -DHAVE_STRTOK_R -DHAVE_GETRANDOM -DHAVE_POSIX_FALLOCATE -DHAVE_SECURE_GETENV -DHAVE_GNU_QSORT_R -DHAVE_STRUCT_TIMESPEC -DHAVE_PROGRAM_INVOCATION_NAME -DHAVE_ISSIGNALING -DHAVE_POSIX_MEMALIGN -DHAVE_DIRENT_D_TYPE -DHAVE_STRTOD_L -DHAVE_DLADDR -DHAVE_DL_ITERATE_PHDR -DSUPPORT_INTEL_INTEGRATED_GPUS -DHAVE_ZLIB -DHAVE_ZSTD -DHAVE_COMPRESSION -DHAVE_PTHREAD -DHAVE_PTHREAD_SETAFFINITY -DHAVE_LIBDRM -DHAVE_LIBUDEV '-DMESA_LLVM_VERSION_STRING="19.0.0"' -DLLVM_IS_SHARED=1 -DLLVM_AVAILABLE=1 -DDRAW_LLVM_AVAILABLE=1 -DUSE_LIBELF -DUSE_LIBGLVND=1 -DHAVE_VALGRIND -DHAVE_LIBUNWIND -DWL_HIDE_DEPRECATED -DHAVE_OPENMP -DHAVE_DRI -DHAVE_DRI2 -DHAVE_DRI3 -DHAVE_DRI3_MODIFIERS -DHAVE_DRISW_KMS -DHAVE_GALLIUM_EXTRA_HUD=1 -DHAVE_LIBSENSORS=1 -mtls-dialect=gnu2 -Werror=return-type -Werror=empty-body -Wmisleading-indentation -Wno-non-virtual-dtor -Wno-missing-field-initializers -Wno-format-truncation -fno-math-errno -fno-trapping-math -flifetime-dse=1 -Wno-unknown-pragmas -Werror=format -Wformat-security -ffunction-sections -fdata-sections -Wno-unused-variable -Wno-unused-but-set-variable -march=x86-64 -mtune=generic -O2 -pipe -fno-plt -fexceptions -Wp,-D_FORTIFY_SOURCE=2 -Wformat -Werror=format-security -fstack-clash-protection -fcf-protection -Wp,-D_GLIBCXX_ASSERTIONS -g -ffile-prefix-map=/build/mesa-git/src=/usr/src/debug/mesa-git -flto=auto -fPIC -pthread -D_GNU_SOURCE -D__STDC_CONSTANT_MACROS -D__STDC_FORMAT_MACROS -D__STDC_LIMIT_MACROS '-DLLVM_LIB_DIR="/usr/lib"' '-DDYNAMIC_LIBCLC_PATH="/usr/share/clc/"' -MD -MQ src/compiler/clc/liblibmesaclc.a.p/clc_helpers.cpp.o -MF src/compiler/clc/liblibmesaclc.a.p/clc_helpers.cpp.o.d -o src/compiler/clc/liblibmesaclc.a.p/clc_helpers.cpp.o -c ../mesa/src/compiler/clc/clc_helpers.cpp
../mesa/src/compiler/clc/clc_helpers.cpp: In function ‘int clc_c_to_spir(const clc_compile_args*, const clc_logger*, clc_binary*)’:
../mesa/src/compiler/clc/clc_helpers.cpp:1124:42: error: invalid conversion from ‘void (*)(const llvm::DiagnosticInfo&, void*)’ to ‘llvm::DiagnosticHandler::DiagnosticHandlerTy’ {aka ‘void (*)(const llvm::DiagnosticInfo*, void*)’} [-fpermissive]
1124 | llvm_ctx.setDiagnosticHandlerCallBack(llvm_log_handler,
| ^~~~~~~~~~~~~~~~
| |
| void (*)(const llvm::DiagnosticInfo&, void*)
In file included from /usr/include/llvm/IR/Metadata.h:27,
from /usr/include/llvm/IR/TrackingMDRef.h:16,
from /usr/include/llvm/IR/DebugLoc.h:17,
from /usr/include/llvm/IR/DiagnosticInfo.h:22,
from ../mesa/src/compiler/clc/clc_helpers.cpp:33:
/usr/include/llvm/IR/LLVMContext.h:171:46: note: initializing argument 1 of ‘void llvm::LLVMContext::setDiagnosticHandlerCallBack(llvm::DiagnosticHandler::DiagnosticHandlerTy, void*, bool)’
171 | DiagnosticHandler::DiagnosticHandlerTy DiagHandler,
| ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~^~~~~~~~~~~
../mesa/src/compiler/clc/clc_helpers.cpp: In function ‘int clc_c_to_spirv(const clc_compile_args*, const clc_logger*, clc_binary*)’:
../mesa/src/compiler/clc/clc_helpers.cpp:1150:42: error: invalid conversion from ‘void (*)(const llvm::DiagnosticInfo&, void*)’ to ‘llvm::DiagnosticHandler::DiagnosticHandlerTy’ {aka ‘void (*)(const llvm::DiagnosticInfo*, void*)’} [-fpermissive]
1150 | llvm_ctx.setDiagnosticHandlerCallBack(llvm_log_handler,
| ^~~~~~~~~~~~~~~~
| |
| void (*)(const llvm::DiagnosticInfo&, void*)
/usr/include/llvm/IR/LLVMContext.h:171:46: note: initializing argument 1 of ‘void llvm::LLVMContext::setDiagnosticHandlerCallBack(llvm::DiagnosticHandler::DiagnosticHandlerTy, void*, bool)’
171 | DiagnosticHandler::DiagnosticHandlerTy DiagHandler,
| ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~^~~~~~~~~~~
../mesa/src/compiler/clc/clc_helpers.cpp: In function ‘int clc_spir_to_spirv(const clc_binary*, const clc_logger*, clc_binary*)’:
../mesa/src/compiler/clc/clc_helpers.cpp:1167:42: error: invalid conversion from ‘void (*)(const llvm::DiagnosticInfo&, void*)’ to ‘llvm::DiagnosticHandler::DiagnosticHandlerTy’ {aka ‘void (*)(const llvm::DiagnosticInfo*, void*)’} [-fpermissive]
1167 | llvm_ctx.setDiagnosticHandlerCallBack(llvm_log_handler,
| ^~~~~~~~~~~~~~~~
| |
| void (*)(const llvm::DiagnosticInfo&, void*)
/usr/include/llvm/IR/LLVMContext.h:171:46: note: initializing argument 1 of ‘void llvm::LLVMContext::setDiagnosticHandlerCallBack(llvm::DiagnosticHandler::DiagnosticHandlerTy, void*, bool)’
171 | DiagnosticHandler::DiagnosticHandlerTy DiagHandler,
| ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~^~~~~~~~~~~
[885/3860] Compiling C++ object src/intel/compiler/libintel_compiler.a.p/brw_disasm_info.cpp.o
[886/3860] Compiling C object src/intel/compiler/libintel_compiler.a.p/brw_eu_emit.c.o
[887/3860] Compiling C++ object src/intel/compiler/libintel_compiler.a.p/brw_fs_cse.cpp.o
[888/3860] Compiling C++ object src/intel/compiler/libintel_compiler.a.p/brw_fs_copy_propagation.cpp.o
[889/3860] Compiling C++ object src/intel/compiler/libintel_compiler.a.p/brw_fs_bank_conflicts.cpp.o
[890/3860] Compiling C++ object src/intel/compiler/libintel_compiler.a.p/brw_fs_cmod_propagation.cpp.o
[891/3860] Linking target src/intel/isl/isl_surf_get_image_offset_test
[892/3860] Compiling C++ object src/intel/common/intel_gfx7_mi_builder_test.p/tests_mi_builder_test.cpp.o
[893/3860] Compiling C++ object src/intel/compiler/libintel_compiler.a.p/brw_fs_combine_constants.cpp.o
[894/3860] Compiling C++ object src/intel/common/intel_gfx11_mi_builder_test.p/tests_mi_builder_test.cpp.o
[895/3860] Compiling C++ object src/intel/common/intel_gfx8_mi_builder_test.p/tests_mi_builder_test.cpp.o
[896/3860] Compiling C++ object src/intel/common/intel_gfx125_mi_builder_test.p/tests_mi_builder_test.cpp.o
[897/3860] Compiling C++ object src/intel/common/intel_hsw_mi_builder_test.p/tests_mi_builder_test.cpp.o
[898/3860] Linking target src/compiler/glsl/tests/general_ir_test
[899/3860] Compiling C++ object src/intel/common/intel_gfx12_mi_builder_test.p/tests_mi_builder_test.cpp.o
[900/3860] Compiling C++ object src/intel/common/intel_gfx9_mi_builder_test.p/tests_mi_builder_test.cpp.o
[901/3860] Compiling C++ object src/intel/compiler/libintel_compiler.a.p/brw_fs.cpp.o
[902/3860] Linking target src/intel/dev/intel_device_info_test
[903/3860] Linking target src/intel/isl/isl_aux_info_test
[904/3860] Linking target src/intel/isl/isl_tilememcpy_test
[905/3860] Compiling C++ object src/compiler/nir/nir_tests.p/tests_opt_varyings_tests_bicm_binary_alu.cpp.o
ninja: build stopped: subcommand failed.
Edited by Eric Engestrom